Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <!-- Logo Section -->
     <div>
-        <img src="images/IX_cr3@mP!4_20251115_094422_0001.png" alt="Logo" class="logo">
+        <img src="/IX_cr3@mP!4_20251115_094422_0001.png" alt="Logo" class="logo">
         <h1 class="text-style">IX_Cr3@mP!e</h1>
     </div>
 
@@ -182,7 +182,7 @@
           <h3 class="Follow-count">5</h3>
         </div>
         <!-- Center Display -->
-        <img id="photoDisplay" class="photo" src="images/compressed_1763446886399.png" alt="Page Image">
+        <img id="photoDisplay" class="photo" src="/compressed_1763446886399.png" alt="Page Image">
 
         <div id="pageText">
             <a href="https://chaturbate.com/sisi_shy/">
