Update title and image paths in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Swipe Page Layout</title>
+<title>IX_Cr3@mP!e</title>
 
 <style>
     body {
@@ -166,7 +166,7 @@
 
     <!-- Logo Section -->
     <div>
-        <img src="/IX_cr3@mP!4_20251115_094422_0001.png" alt="Logo" class="logo">
+        <img src="IX_cr3@mP!4_20251115_094422_0001.png" alt="Logo" class="logo">
         <h1 class="text-style">IX_Cr3@mP!e</h1>
     </div>
 
@@ -182,7 +182,7 @@
           <h3 class="Follow-count">5</h3>
         </div>
         <!-- Center Display -->
-        <img id="photoDisplay" class="photo" src="/compressed_1763446886399.png" alt="Page Image">
+        <img id="photoDisplay" class="photo" src="compressed_1763446886399.png" alt="Page Image">
 
         <div id="pageText">
             <a href="https://chaturbate.com/sisi_shy/">
@@ -205,9 +205,9 @@
 <script>
 /* --- PAGE DATA LIST --- */
 const pages = [
-    { image: "images/compressed_1763446886399.png", text: "<h2>Sisishy</h2>""<a href='https://stripchat.com/sisishy/follow-me> Next Scheduled Showtime - Monday 5:15 AM – 2:30 PM'</a>" },  
-    { image: "images/compressed_1763446886399.png", text: "<h2>Gallery</h2><p>This is page 2 swipe content.</p>" },
-    { image: "images/compressed_1763446886399.png", text: "<h2>Show times</h2><p>This is page 3 swipe content.</p>" },
+    { image: "compressed_1763446886399.png", text: "<h2>Sisishy</h2>""<a href='https://stripchat.com/sisishy/follow-me> Next Scheduled Showtime - Monday 5:15 AM – 2:30 PM'</a>" },  
+    { image: "compressed_1763446886399.png", text: "<h2>Gallery</h2><p>This is page 2 swipe content.</p>" },
+    { image: "compressed_1763446886399.png", text: "<h2>Show times</h2><p>This is page 3 swipe content.</p>" },
     ];
 
 let pageIndex = 0;
@@ -261,9 +261,9 @@ swipeArea.addEventListener("touchend", e => {
     <script>
      /* --- PAGE DATA LIST --- */
 const pages = [
-    { image: "images/compressed_1763446886399.png", text: "<h2>Sisishy</h2>" },
-    { image: "images/compressed_1763446886399.png", text: "<h2>Gallery</h2>" },
-    { image: "images/compressed_1763446886399.png", text: "<h2>Show times</h2>" },
+    { image: "compressed_1763446886399.png", text: "<h2>Sisishy</h2>" },
+    { image: "compressed_1763446886399.png", text: "<h2>Gallery</h2>" },
+    { image: "compressed_1763446886399.png", text: "<h2>Show times</h2>" },
 ];
 
 /* FOLLOW COUNT INCREASE */
