Add Google Tag Manager noscript code
Added Google Tag Manager noscript support for tracking.

--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
 </head>
 
 <body class="parent-element">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4DRRX2H"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div class="content">
 
     <!-- Logo Section -->
